--- a/apps/web/public/index.html
+++ b/apps/web/public/index.html
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Dr. Jackie Souto</title>
+    <title>Ismael Silva Ministry</title>
   </head>
   <body>
-    <noscript>Be your best!</noscript>
+    <noscript>Love is what Love does!</noscript>
     <div id="root"></div>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;800&display=swap" rel="stylesheet" />
