--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo-ministry1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pr. Ismael Silva</title>
+    <title>Ismael Silva Ministry</title>
     <script>
       // Theme initialization to prevent flash
       (function() {
